@@ -1,5 +1,5 @@
 # 使用更轻量的基础镜像
-FROM eclipse-temurin:17-jre-alpine
+FROM eclipse-temurin:21-jre-alpine
 
 # 设置时区和中文环境（Alpine版）
 RUN apk add --no-cache tzdata font-noto-cjk \
@@ -12,4 +12,4 @@ COPY target/NyxBot.jar /app
 
 EXPOSE 8080
 
-CMD ["java", "-Dfile.encoding=UTF-8", "-jar", "/app/NyxBot.jar"]
+CMD ["java", "-XX:+UseZGC", "-Dfile.encoding=UTF-8", "-jar", "/app/NyxBot.jar"]
